--- a/PhongKham/Views/Shared/_Layout.cshtml
+++ b/PhongKham/Views/Shared/_Layout.cshtml
@@ -808,17 +808,17 @@
         </main>
     
     <div id="back-top" style="cursor: pointer; border-radius: 50%;z-index:9999" title="Len Dau Trang."></div>
-    <footer id="footer" class="container-fluid">
+    <footer id="footer">
         <!-- FOOTER 1 -->
         <!-- FOOTER 2 -->
-        <div class="row margin2s footer row">
+        <div class="row margin2s footer">
             <div class="col footer-slogan">
                 <h3>
                     Phía sau ung thư là cuộc sống<br />
                     DecaCare cùng bạn nâng niu cuộc sống này
                 </h3>
             </div>
-            <div id="nav_menu-3" class="col-lg-6 footer-fb">
+            <div id="nav_menu-3" class="col-md-6 footer-fb">
                 <span class="widget-title">Follow kênh của chúng tôi</span>
                 <div class="is-divider small"></div>
                 <div class="menu-menu-trai-bo-mon-trung-tam-container">
@@ -846,7 +846,7 @@
                          data-show-facepile="true"></div>
                 </div>
             </div>
-            <div id="nav_menu-4" class="col-lg-6 footer-map">
+            <div id="nav_menu-4" class="col-md-6 footer-map">
                 <span class="widget-title">Bản đồ tới chúng tôi &nbsp;</span>
                 <div class="is-divider small"></div>
                 <div class="menu-menu-trai-chuong-trinh-dao-tao-container googlemap">
