--- a/PhongKham/wwwroot/css/file/newstyle.scss
+++ b/PhongKham/wwwroot/css/file/newstyle.scss
@@ -352,23 +352,10 @@
 }
 
 #center {
-    .news-content {
-        ul {
-            padding-left: 0px;
-
-            li {
-                a {
-                    color: #337ab7;
-                }
-
-                a:hover {
-                    color: #23527c;
-                }
-            }
-        }
-    }
-
     .ldangnhap {
+        a{
+            cursor:pointer;
+        }
         .main-tit {
             h2 {
                 color: var(--main-color);
@@ -384,63 +371,36 @@
             .form-group {
                 margin-inline: 0px !important;
             }
-
-            .qmk {
-                a {
-                    color: #337ab7;
-                    cursor: pointer;
-                }
-
-                a:hover {
-                    color: #23527c;
-                }
-            }
         }
     }
-}
-
-.form-group {
-    margin-inline: 0px !important;
-    margin-right: -15px;
-    margin-left: -15px;
-    margin-bottom: 15px;
-
-    label {
-        display: inline-block;
-        max-width: 100%;
-        margin-bottom: 5px;
-        font-weight: 700;
+    .news-content {
+        margin-top:5px
     }
 }
-
 #ModalFP {
     top: 15%;
+    a{
+        cursor:pointer;
+    }
 
     #OTPForm {
         display: none;
         margin-top: 10px;
+        
 
         input[type="text"] {
             display: inline;
             width: 200px;
             margin-bottom: 5px;
+            margin-inline:5px;
         }
 
         input[type="submit"] {
             margin-top: -1px;
         }
-
-        a {
-            color: #337ab7;
-            cursor: pointer;
-        }
-
-        a:hover {
-            color: #23527c;
-            text-decoration: underline !important;
-        }
     }
 }
+
 #footer {
     background-color: #ebf0f5;
 
@@ -532,8 +492,5 @@
 
     .absolute-footer {
         padding-top: 10px;
-        p {
-            margin-bottom:0px !important;
-        }
     }
 }
