--- a/PhongKham/Views/Shared/_Layout.cshtml
+++ b/PhongKham/Views/Shared/_Layout.cshtml
@@ -45,6 +45,7 @@
           href="~/css/lib/fontawesome-all.min.css"
            /> *@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="~/css/lib/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/common-bundle.min.css" />
     @* <link rel="stylesheet" href="~/css/style.css" />
     <link rel="stylesheet" href="~/css/newstyle.css" />
@@ -874,16 +875,16 @@
         </div>
         <!-- .absolute-footer -->
     </footer>
-  @*   <!-- SmartMenus jQuery plugin -->
+    <!-- SmartMenus jQuery plugin -->
     <script type="text/javascript" src="~/js/lib/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="~/js/lib/jquery-ui.min.js"></script>
     <script type="text/javascript" src="~/js/lib/bootstrap.min.js"></script>
-    <script type="text/javascript" src="~/js/lib/fontawesome-all.min.js"></script>
-    <script type="text/javascript" src="~/js/lib/splide.min.js"></script>
-    <script type="text/javascript" src="~/js/lib/jquery.smartmenus.js"></script>
+    @* <script type="text/javascript" src="~/js/lib/fontawesome-all.min.js"></script>
+    <script type="text/javascript" src="~/js/lib/splide.min.js"></script> *@
+    <script type="text/javascript" src="~/js/lib/jquery.smartmenus.min.js"></script>
    
     <!-- My custom js -->
-    <script asp-append-version="true" src="~/js/site.js"></script> *@
+    <script type="text/javascript" src="~/js/shared.min.js"></script>
 
     
     
