--- a/PhongKham/Views/Account/Index.cshtml
+++ b/PhongKham/Views/Account/Index.cshtml
@@ -35,7 +35,7 @@
                 <div class="form-group form-footer">
                     <p>
                         Bạn chưa có tài khoản?
-                        <a href="/dang-ky/3" >Click vào đây!</a>
+                        <a href="/dang-ky" >Click vào đây!</a>
                     </p>
                     <input class="btn btn-default"
                            id="btn-dangnhap"
