upgrade lên bootstrap 5

--- a/PhongKham/Views/Shared/Error.cshtml
+++ b/PhongKham/Views/Shared/Error.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Trang không tồn tại</h1>
+<h1 class="text-danger">Lỗi @Model.StatusCode</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
 
 @if (Model.ShowRequestId)
