--- a/PhongKham/Views/Shared/_Layout.cshtml
+++ b/PhongKham/Views/Shared/_Layout.cshtml
@@ -21,9 +21,8 @@
     <!-- Dublin Core -->
     <link rel="schema.DC" href="https://purl.org/dc/elements/1.1/" />
     <meta name="DC.title" content="" />
-    <meta name="DC.identifier" content="//bvhungvuong.vn/" />
-    <meta name="DC.description" content="Bệnh viện Hùng Vương" />
-    <meta name="DC.subject" content="Bệnh viện Hùng Vương" />
+    
+    
     <meta name="DC.language" scheme="UTF-8" content="vi,en" />
     <!-- Geo -->
     <meta name="geo.region" content="VN" />
@@ -33,11 +32,8 @@
     <!-- Share facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:image" content="~/assets/hinhanh/85123_banner_vi.png" />
-    <meta property="og:image:alt" content="Bệnh viện Hùng Vương" />
-    <meta property="og:title" content="Bệnh viện Hùng Vương" />
-    <meta property="og:description" content="Bệnh viện Hùng Vương" />
-    <meta property="og:site_name" content="Bệnh Viện Hùng Vương" />
-    <meta property="og:url" content="https://bvhungvuong.vn:443/" />
+    
+    
     <!-- Bootstrap CSS-->
     
     <!-- Font Awesome -->
@@ -45,6 +41,7 @@
           href="~/css/lib/fontawesome-all.min.css"
            /> *@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="~/css/lib/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/common-bundle.min.css" />
     @* <link rel="stylesheet" href="~/css/style.css" />
     <link rel="stylesheet" href="~/css/newstyle.css" />
@@ -463,18 +460,16 @@
                       </ul>
                     </li> -->
                     <li class="menu-line">
-                        @{
-                            if (User == null || User.Identity == null || User.Identity.IsAuthenticated)
-                            {
-                                <a href="@Url.Action("Logout", "Account")">@User.Identity.Name</a>
-                            }
-                            else
-                            {
-                                <a href="@Url.Action("Index", "Account")">Đăng nhập</a>
-                            }
+                        @* @if (Context.Session.GetString("Id") == null)
+                        {
+                            @Html.ActionLink("Đăng nhập", "Index", "Account")
                         }
+                        else
+                        {
+                            @Html.ActionLink("Đăng xuất", "Logout", "Account")
+                        } *@
+                        @Html.ActionLink("Đăng nhập", "Index", "Account")
                     </li>
-
                     <!-- <li class="menu-line">
                       <a href="index.html"
                         ><img
@@ -808,17 +803,17 @@
         </main>
     
     <div id="back-top" style="cursor: pointer; border-radius: 50%;z-index:9999" title="Len Dau Trang."></div>
-    <footer id="footer">
+    <footer id="footer" class="container-fluid">
         <!-- FOOTER 1 -->
         <!-- FOOTER 2 -->
-        <div class="row margin2s footer">
+        <div class="row margin2s footer row">
             <div class="col footer-slogan">
                 <h3>
                     Phía sau ung thư là cuộc sống<br />
                     DecaCare cùng bạn nâng niu cuộc sống này
                 </h3>
             </div>
-            <div id="nav_menu-3" class="col-md-6 footer-fb">
+            <div id="nav_menu-3" class="col-lg-6 footer-fb">
                 <span class="widget-title">Follow kênh của chúng tôi</span>
                 <div class="is-divider small"></div>
                 <div class="menu-menu-trai-bo-mon-trung-tam-container">
@@ -846,7 +841,7 @@
                          data-show-facepile="true"></div>
                 </div>
             </div>
-            <div id="nav_menu-4" class="col-md-6 footer-map">
+            <div id="nav_menu-4" class="col-lg-6 footer-map">
                 <span class="widget-title">Bản đồ tới chúng tôi &nbsp;</span>
                 <div class="is-divider small"></div>
                 <div class="menu-menu-trai-chuong-trinh-dao-tao-container googlemap">
@@ -877,16 +872,16 @@
         </div>
         <!-- .absolute-footer -->
     </footer>
-  @*   <!-- SmartMenus jQuery plugin -->
-    <script type="text/javascript" src="~/js/lib/jquery-3.5.1.min.js"></script>
+    <!-- SmartMenus jQuery plugin -->
+    
     <script type="text/javascript" src="~/js/lib/jquery-ui.min.js"></script>
     <script type="text/javascript" src="~/js/lib/bootstrap.min.js"></script>
-    <script type="text/javascript" src="~/js/lib/fontawesome-all.min.js"></script>
-    <script type="text/javascript" src="~/js/lib/splide.min.js"></script>
-    <script type="text/javascript" src="~/js/lib/jquery.smartmenus.js"></script>
-   
+    @* <script type="text/javascript" src="~/js/lib/fontawesome-all.min.js"></script>
+    <script type="text/javascript" src="~/js/lib/splide.min.js"></script> *@
+    <script type="text/javascript" src="~/js/lib/jquery.smartmenus.min.js"></script>
+    
     <!-- My custom js -->
-    <script asp-append-version="true" src="~/js/site.js"></script> *@
+    <script type="text/javascript" src="~/js/shared.min.js"></script>
 
     
     
