--- a/PhongKham/Views/Home/Index.cshtml
+++ b/PhongKham/Views/Home/Index.cshtml
@@ -199,6 +199,7 @@
         </div>
     </div>
 </div>
+@section Scripts { 
     <script src="~/js/home-bundle.min.js"></script>
-    
+}
 </section>
