--- a/PhongKham/Views/Shared/_Layout.cshtml
+++ b/PhongKham/Views/Shared/_Layout.cshtml
@@ -43,29 +43,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="~/css/lib/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/common-bundle.min.css" />
-    @* <link rel="stylesheet" href="~/css/style.css" />
-    <link rel="stylesheet" href="~/css/newstyle.css" />
-    <link rel="stylesheet" href="~/css/lib/splide.min.css" />
-    <link rel="stylesheet" href="~/css/lib/sm-core-css.css" />
-    <link rel="stylesheet" href="~/css/lib/sm-blue.css" />
-    <link href="~/css/lib/bootstrap.min.css" rel="stylesheet" type="text/css" /> *@
-    
-    <!-- SmartMenus core CSS (required) -->
-   @*  <link href="~/css/lib/sm-core-css.css" rel="stylesheet" type="text/css" />
-    <!-- "sm-blue" menu theme (optional, you can use your own CSS, too) -->
-    <link href="~/css/lib/sm-blue.css" rel="stylesheet" type="text/css" />   
-    <!-- Slick -->
-    <link rel="stylesheet"
-          href="~/css/lib/splide.min.css" />
-    <!-- My main CSS -->
-    <link href="~/css/main.css rel="stylesheet" type="text/css" />
-    <link href="~/css/style.css" rel="stylesheet" type="text/css" />
-    <link href="~/css/newstyle.css" rel="stylesheet" type="text/css" /> *@
-    @* <link href="~/css/lib.min.css" rel="stylesheet" type="text/css" />
-
-    <link href="~/css/site.min.css" rel="stylesheet" type="text/css" /> *@
     <link rel="stylesheet" href="~/css/common.min.css" />
-
+    @RenderSection("Styles", required: false)
 </head>
 <body>
     <header>
@@ -460,15 +439,16 @@
                       </ul>
                     </li> -->
                     <li class="menu-line">
-                        @* @if (Context.Session.GetString("Id") == null)
-                        {
-                            @Html.ActionLink("Đăng nhập", "Index", "Account")
-                        }
-                        else
-                        {
-                            @Html.ActionLink("Đăng xuất", "Logout", "Account")
-                        } *@
-                        @Html.ActionLink("Đăng nhập", "Index", "Account")
+                       @{
+                            if (User == null || User.Identity == null || User.Identity.IsAuthenticated)
+                            {
+                                <a href="@Url.Action("Logout", "Account")">@User.Identity.Name</a>
+                            }
+                            else
+                            {
+                                <a href="@Url.Action("Index", "Account")">Đăng nhập</a>
+                            }
+                       }
                     </li>
                     <!-- <li class="menu-line">
                       <a href="index.html"
@@ -874,22 +854,13 @@
     </footer>
     <!-- SmartMenus jQuery plugin -->
     
+    <script type="text/javascript" src="~/js/lib/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="~/js/lib/jquery-ui.min.js"></script>
     <script type="text/javascript" src="~/js/lib/bootstrap.min.js"></script>
-    @* <script type="text/javascript" src="~/js/lib/fontawesome-all.min.js"></script>
-    <script type="text/javascript" src="~/js/lib/splide.min.js"></script> *@
     <script type="text/javascript" src="~/js/lib/jquery.smartmenus.min.js"></script>
-    
+  
     <!-- My custom js -->
     <script type="text/javascript" src="~/js/shared.min.js"></script>
-
-    
-    
-    
-    @* <script src="~/js/shared.js"></script>
-    <script src="~/js/file/home.js"></script> *@
-
-  
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
