--- a/PhongKham/Views/Home/Index.cshtml
+++ b/PhongKham/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
 
 <!-- **Slider Section - End** -->
 <div id="info" class="margin2s center w-clear">
-    <div class="g_grid ro">
+    <div class="g_grid row">
         <div class="user-type-portals home-promo">
             <div class="user-type-portals__link-portal -pink g_third m_hero g_omega">
                 <a href="gioi-thieu.html" class="header-link">
@@ -98,7 +98,7 @@
     </div>
 </div>
 
-<div id="news" class="margin2s center w-clear padding-10">
+<div id="news" class="margin2s center w-clear padding-10 row">
     <div class="col-md-12">
         <div class="i-tit w-clear tintucyte">
             <h2>Tin tức và kiến thức</h2>
@@ -199,6 +199,8 @@
         </div>
     </div>
 </div>
-    <script src="~/js/home-bundle.min.js"></script>
+   
+<script src="~/js/home-bundle.min.js"></script>
+ 
     
 </section>
