--- a/PhongKham/Views/Shared/_Layout.cshtml
+++ b/PhongKham/Views/Shared/_Layout.cshtml
@@ -806,7 +806,7 @@
     <footer id="footer" class="container-fluid">
         <!-- FOOTER 1 -->
         <!-- FOOTER 2 -->
-        <div class="row margin2s footer row">
+        <div class="row margin2s footer">
             <div class="col footer-slogan">
                 <h3>
                     Phía sau ung thư là cuộc sống<br />
