--- a/PhongKham/wwwroot/css/file/newstyle.scss
+++ b/PhongKham/wwwroot/css/file/newstyle.scss
@@ -441,6 +441,12 @@
         }
     }
 }
+#notify{
+    bottom:10%;
+    .toast {
+        background:white;
+    }
+}
 #footer {
     background-color: #ebf0f5;
 
