--- a/PhongKham/Views/Account/Index.cshtml
+++ b/PhongKham/Views/Account/Index.cshtml
@@ -99,6 +99,19 @@
             </div>
         </div>
     </div>
+    <div id="notify" class="toast-container position-fixed end-0 p-3">
+        <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <strong class="me-auto">Hệ thống</strong>
+                <small>11 mins ago</small>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body">
+                <span class="toast-body-content"></span>
+            </div>
+        </div>
+    </div>
 <script src="~/js/account-bundle.min.js"></script>
+    
 </section>
 
