--- a/PhongKham/Views/Account/Index.cshtml
+++ b/PhongKham/Views/Account/Index.cshtml
@@ -42,7 +42,7 @@
                                    type="submit"
                                    value="Đăng nhập" />
                             <span class="qmk">
-                                <a data-toggle="modal" data-target="#ModalFP">Quên mật khẩu?</a>
+                                <a data-bs-toggle="modal" data-bs-target="#ModalFP">Quên mật khẩu?</a>
                             </span>
                         </div>
                         <input type="hidden" name="dangnhap" />
