--- a/PhongKham/Views/Account/DangKy.cshtml
+++ b/PhongKham/Views/Account/DangKy.cshtml
@@ -95,9 +95,26 @@
         </aside>
     </div>
 </div>
-
+    <div class="toast text-bg-success" style="position: absolute; top: 40px; right: 0; background-color: white;">
+        <div class="d-flex">
+            <div class="toast-body">
+                Hello, world! This is a toast message.
+            </div>
+            <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+    </div>
 @section Scripts {
     <script src="~/js/account-bundle.min.js"></script>
     <script src="~/js/daterange.min.js"></script>
+        <script>
+            $(document).ready(function () {
+                var message = "@Html.Raw(TempData["Message"])";
+                $(".toast-body").text(message);
+                if (message.length > 0) {
+                    const toast = new bootstrap.Toast($(".toast"));
+                    toast.show();
+                }
+            });
+        </script>
 }
 </section>
