--- a/PhongKham/Views/Home/Index.cshtml
+++ b/PhongKham/Views/Home/Index.cshtml
@@ -199,8 +199,25 @@
         </div>
     </div>
 </div>
-   
-<script src="~/js/home-bundle.min.js"></script>
- 
-    
+    <div class="toast text-bg-success" style="position: absolute; top: 40px; right: 0; background-color: white;">
+        <div class="d-flex">
+            <div class="toast-body">
+                Hello, world! This is a toast message.
+            </div>
+            <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+    </div>
+    @section Scripts {
+        <script src="~/js/home-bundle.min.js"></script>
+        <script>
+            $(document).ready(function () {
+                var message = "@Html.Raw(TempData["Message"])";
+                $(".toast-body").text(message);
+                if (message.length > 0) {
+                    const toast = new bootstrap.Toast($(".toast"));
+                    toast.show();
+                }
+            });
+        </script>
+    }
 </section>
