--- a/PhongKham/Views/Shared/_Layout.cshtml
+++ b/PhongKham/Views/Shared/_Layout.cshtml
@@ -854,7 +854,7 @@
     </footer>
     <!-- SmartMenus jQuery plugin -->
     
-    
+    <script type="text/javascript" src="~/js/lib/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="~/js/lib/jquery-ui.min.js"></script>
     <script type="text/javascript" src="~/js/lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="~/js/lib/jquery.smartmenus.min.js"></script>
