làm: validate chức năng trên view

--- a/PhongKham/Views/Account/AccessDenied.cshtml
+++ b/PhongKham/Views/Account/AccessDenied.cshtml
@@ -2,6 +2,6 @@
 @{}
 
 <div>
-    <h1>Không truy cập được</h1>
-    <p>Bạn không có quyền truy cập chức năng này</p>
+    <h1>Bạn ơi!!!</h1>
+    <p>Nạp thẻ để truy cập được chức năng nào !!!</p>
 </div>
